--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.4
 cloudinary==1.44.1
 Django==6.0.1
 django-cloudinary-storage==0.3.0
+django-filter==25.2
 djangorestframework==3.16.1
 drf-spectacular==0.29.0
 et_xmlfile==2.0.0
