--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==25.4.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 cloudinary==1.44.1
+dj-database-url==3.1.0
 Django==6.0.1
 django-cloudinary-storage==0.3.0
 django-filter==25.2
@@ -17,6 +18,7 @@ jsonschema-specifications==2025.9.1
 mccabe==0.7.0
 openpyxl==3.1.5
 pillow==12.1.0
+psycopg2-binary==2.9.11
 pycodestyle==2.14.0
 pyflakes==3.4.0
 python-dotenv==1.2.1
