--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,7 @@ db.sqlite3
 db.sqlite3-journal
 
 # Media
-# media/ - Removed to allow uploading photos
-!media/.gitkeep
+media/
 
 # Static
 staticfiles/
